--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-flask
-requests
-pandas
-numpy
-waitress
-gunicorn
+echo flask > requirements.txt
+echo gunicorn >> requirements.txt
+echo requests >> requirements.txt
